<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C5C6C7"
    tools:context=".activity_search_dog_breed">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_search_the_dog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/tv_search_dog_breeds"
                android:textColor="#0B0C10"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SearchView
                android:id="@+id/searchDogBreeds"
                android:layout_width="351dp"
                android:layout_height="55dp"
                android:layout_marginTop="60dp"
                android:queryHint="SEARCH DOGS"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_search_the_dog" />

            <ViewFlipper
                android:id="@+id/searchedImage"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="264dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchDogBreeds"
                app:layout_constraintVertical_bias="0.22"
                tools:ignore="MissingConstraints,NestedScrolling" />

            <Button
                android:id="@+id/btn_submit_02"
                android:layout_width="250sp"
                android:layout_height="60dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_button_v1"
                android:text="@string/btn_submit"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_stop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchedImage"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/btn_stop"
                android:layout_width="250sp"
                android:layout_height="60dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/custom_button_v1"
                android:text="@string/btn_stop"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>