<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C5C6C7"
    tools:context=".activity_identify_breed">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_id_the_breed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_identify_the_breed"
                android:textColor="#0B0C10"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.048" />

            <ImageView
                android:id="@+id/random_imageView"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="25dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_id_the_breed"
                app:layout_constraintVertical_bias="0.053" />

            <Spinner
                android:id="@+id/breed_spinner"
                android:layout_width="300dp"
                android:layout_height="58dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="124dp"
                android:background="#45A29E"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/random_imageView"
                app:layout_constraintVertical_bias="0.2"
                android:gravity="center_horizontal" />

            <Button
                android:id="@+id/btn_submit_1"
                android:layout_width="250sp"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/custom_button_v1"
                android:text="@string/btn_submit"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/breed_spinner"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/button"
                android:layout_width="73dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/custom_button_v2"
                android:contentDescription="@string/description_home_button"
                android:onClick="home_screen"
                android:src="@drawable/home_button_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_submit_1"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>